Поправил index_autorized.html

--- a/index_autorized.html
+++ b/index_autorized.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
 
     <!-- Корректировка стиля. -->
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/ads_views.css">
+    <link rel="stylesheet" href="./fonts/stylesheet.css">
+    <link rel="stylesheet" href="./css/global.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/ads_views.css">
 
     <title>Доска объявлений №1 по продаже оргтехники</title>
 </head>
@@ -67,7 +68,7 @@
     </div>
     <div class="collapse navbar-collapse" id="menu">
         <ul class="navbar-nav">
-            <div class="menuMobile">
+            <div class="nav-item-mobile">
                 <a class="nav-link btn btn-success btn-sm" href="#"><i class="fa fa-plus-circle"></i> Добавить объявление</a>
                 <a class="nav-link btn btn-sm btn-danger" href="#"><i class="fa fa-plus-circle"></i> Добавить горячий запрос</a>
             </div>
@@ -96,7 +97,7 @@
         <div class="row">
             <div class="d-none d-md-block col-md-12 text-right menu_top align-items-center">
                 <a href="#">
-                    <img class="logo2" src="/img/logo.png" alt="ProdaiZip.ru">
+                    <img class="logo2" src="./img/logo.png" alt="ProdaiZip.ru">
                 </a>
                 <a href="#">
                 <span class="fa-stack fa-1x has-badge" data-count="4">
@@ -132,7 +133,7 @@
                     Выйти
                 </a>
                 <a href="#" class="profileimg log-in">
-                    <img src="/img/840px-Elon-musk-850.jpg" alt="Профиль">
+                    <img src="./img/840px-Elon-musk-850.jpg" alt="Профиль">
                 </a>
                 <a href="#" class="btn btn-danger">
                     Подать объявление
@@ -904,7 +905,7 @@
                     <div class="col ads highlight">
                         <div class="ads_wrapper">
                             <a href="#" title="Продам принтер HP 1010 как новый!">
-                                <img src="../img/print_main.jpg">
+                                <img src="./img/print_main.jpg">
                             </a>
                         </div>
                         <div>
@@ -922,7 +923,7 @@
                     <div class="col ads highlight">
                         <div class="ads_wrapper">
                             <a href="#" title="Куплю L800 для печати фотографий">
-                                <img src="../img/print_str.jpg">
+                                <img src="./img/print_str.jpg">
                             </a>
                         </div>
                         <div>
@@ -939,7 +940,7 @@
                     <div class="col ads highlight">
                         <div class="ads_wrapper">
                             <a href="#" title="Samsung SCX-4200 как новый">
-                                <img src="../img/printer_2.jpg">
+                                <img src="./img/printer_2.jpg">
                             </a>
                         </div>
                         <div>
@@ -956,7 +957,7 @@
                     <div class="col ads highlight">
                         <div class="ads_wrapper">
                             <a href="#" title="Ноутбук Acer, рабочий, разбита матрица">
-                                <img src="../img/noutebook.jpg">
+                                <img src="./img/noutebook.jpg">
                             </a>
                         </div>
                         <div>
@@ -1098,7 +1099,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 
 </body>
 </html>
