Замена названией классов на английские слова.

--- a/index.html
+++ b/index.html
@@ -1090,9 +1090,9 @@
     </div>
 
 <!--Подвал сайта-->
-    <div class="container-fluid podval">
+    <div class="container-fluid footer">
         <div class="row justify-content-around">
-            <div class="col-12 text-center priziv">
+            <div class="col-12 text-center slogan-to-earn">
                 <h2>Начните зарабатывать сейчас</h2>
                 <button class="btn btn-warning">Зарегистрироваться</button>
                 <button class="btn btn-danger">Подать объявление</button>
@@ -1125,7 +1125,7 @@
                 <p><a href="#">Кошелек</a></p>
                 <p><a href="#">Профиль</a></p>
             </div>
-            <div class="col-12 podvalCopyright">
+            <div class="col-12 footerCopyright">
                 <hr>
                 <h6>Пользование сервисами сайта, в том числе подача объявлений, означает принятие условий <a href="#">пользовательского соглашения</a></h6>
                 <h6>Все права защищены. ProdaiZIP©</h6>
