--- a/index_autorized.html
+++ b/index_autorized.html
@@ -17,6 +17,7 @@
     <title>Доска объявлений №1 по продаже оргтехники</title>
 </head>
 <body>
+
 <!--Меню для маленьких экранов-->
 <nav class="navbar d-md-none navbar-expand-md navbar-dark sticky-top">
     <div class="container-fluid">
@@ -68,7 +69,7 @@
     </div>
     <div class="collapse navbar-collapse" id="menu">
         <ul class="navbar-nav">
-            <div class="nav-item-mobile">
+            <div class="nav-item nav-item-mobile">
                 <a class="nav-link btn btn-success btn-sm" href="#"><i class="fa fa-plus-circle"></i> Добавить объявление</a>
                 <a class="nav-link btn btn-sm btn-danger" href="#"><i class="fa fa-plus-circle"></i> Добавить горячий запрос</a>
             </div>
@@ -1054,9 +1055,9 @@
     </div>
 
 <!--Подвал сайта-->
-    <div class="container-fluid podval">
+    <div class="container-fluid footer">
         <div class="row justify-content-around">
-            <div class="col-12 text-center priziv">
+            <div class="col-12 text-center slogan-to-earn">
                 <h2>Начните зарабатывать сейчас</h2>
                 <button class="btn btn-danger">Подать объявление</button>
             </div>
@@ -1088,7 +1089,7 @@
                 <p><a href="#">Кошелек</a></p>
                 <p><a href="#">Профиль</a></p>
             </div>
-            <div class="col-12 podvalCopyright">
+            <div class="col-12 footerCopyright">
                 <hr>
                 <h6>Пользование сервисами сайта, в том числе подача объявлений, означает принятие условий <a href="#">пользовательского соглашения</a></h6>
                 <h6>Все права защищены. ProdaiZIP©</h6>
