--- a/index_autorized.html
+++ b/index_autorized.html
@@ -19,55 +19,65 @@
 <body>
 
 <!--Меню для маленьких экранов-->
-<nav class="navbar d-md-none navbar-expand-md navbar-dark sticky-top">
-    <div class="container-fluid">
-        <a href="#" class="navbar-brand">ProdaiZIP.ru</a>
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#search">
-            <i class="fa fa-search"></i>
-        </button>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#profile">
-            <i class="fa fa-user"></i>
-        </button>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
-            <i class="fa fa-list"></i>
-        </button>
-    </div>
-    <div class="collapse navbar-collapse" id="search">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <form class="form">
-                    <label for="searchInput">Что вы ищете</label>
-                    <input id="searchInput" class="form-control " type="search" placeholder="Введите слово для поиска">
-                    <label for="searchCategory">Категория</label>
-                    <select class="form-control" id="searchCategory">
-                        <option>Принтеры/копиры</option>
-                        <option>Телефоны</option>
-                        <option>Планшеты</option>
-                        <option>Ноутбуки</option>
-                        <option>Мониторы/телевизоры</option>
-                        <option>Компьютеры/комплектующие</option>
-                        <option>Расходные материалы</option>
-                        <option>Прочее</option>
-                    </select>
-                    <label for="searchCity">Местоположение</label>
-                    <input id="searchCity" class="form-control " type="text" placeholder="Город">
-                    <button class="btn btn-success" type="submit">Поиск</button>
-                    <button class="btn btn-danger" type="submit">Сброс</button>
-                </form>
-            </li>
-        </ul>
-    </div>
-    <div class="collapse navbar-collapse" id="profile">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Войти</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Зарегистрироваться</a>
-            </li>
-        </ul>
-    </div>
-    <div class="collapse navbar-collapse" id="menu">
+<div class="container px-0">
+    <nav class="navbar navbar-expand-md navbar-dark sticky-top px-0">
+        <div class="d-none d-md-flex">
+            <a href="#index.html" class="navbar-brand"><img class="logo2" src="./img/logo.png" alt="ProdaiZip.ru"></a>
+        </div>
+
+        <div class="d-flex d-md-none">
+            <a href="#" class="navbar-brand">ProdaiZIP.ru</a>
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#search">
+                <i class="fa fa-search"></i>
+            </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#profile">
+                <i class="fa fa-user"></i>
+            </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
+                <i class="fa fa-list"></i>
+            </button>
+        </div>
+        <span class="d-md-none">
+        <div class="collapse navbar-collapse" id="search">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <form class="form">
+                        <label for="searchInput">Что вы ищете</label>
+                        <input id="searchInput" class="form-control " type="search" placeholder="Введите слово для поиска">
+                        <label for="searchCategory">Категория</label>
+                        <select class="form-control" id="searchCategory">
+                            <option>Принтеры/копиры</option>
+                            <option>Телефоны</option>
+                            <option>Планшеты</option>
+                            <option>Ноутбуки</option>
+                            <option>Мониторы/телевизоры</option>
+                            <option>Компьютеры/комплектующие</option>
+                            <option>Расходные материалы</option>
+                            <option>Прочее</option>
+                        </select>
+                        <label for="searchCity">Местоположение</label>
+                        <input id="searchCity" class="form-control " type="text" placeholder="Город">
+                        <button class="btn btn-success" type="submit">Поиск</button>
+                        <button class="btn btn-danger" type="submit">Сброс</button>
+                    </form>
+                </li>
+            </ul>
+        </div>
+    </span>
+        <span class="d-md-none">
+        <div class="collapse navbar-collapse" id="profile">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Войти</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Зарегистрироваться</a>
+                </li>
+            </ul>
+        </div>
+    </span>
+        <span class="d-md-none">
+        <div class="collapse navbar-collapse" id="menu">
         <ul class="navbar-nav">
             <div class="nav-item nav-item-mobile">
                 <a class="nav-link btn btn-success btn-sm" href="#"><i class="fa fa-plus-circle"></i> Добавить объявление</a>
@@ -90,7 +100,10 @@
             </li>
         </ul>
     </div>
-</nav>
+    </span>
+
+    </nav>
+</div>
 
 <!--Основной контент сайта-->
     <div class="container">
