--- a/index_autorized.html
+++ b/index_autorized.html
@@ -21,14 +21,23 @@
 <!--Меню для маленьких экранов-->
 <div class="container px-0">
     <nav class="navbar navbar-expand-md navbar-dark sticky-top px-0">
-        <div class="d-none d-md-flex">
+        <div class="d-none d-md-flex mr-auto">
             <a href="#index.html" class="navbar-brand"><img class="logo2" src="./img/logo.png" alt="ProdaiZip.ru"></a>
+        </div>
+        <div class="d-none d-md-flex">
+            <form class="form-inline">
+                <input class="form-control mr-sm-2" type="search" placeholder="Поиск" aria-label="Поиск">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
+            </form>
+            <a href="#" class="btn btn-danger">
+                Подать объявление
+            </a>
         </div>
 
         <div class="d-flex d-md-none">
             <a href="#" class="navbar-brand">ProdaiZIP.ru</a>
-            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#search">
-                <i class="fa fa-search"></i>
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="">
+                <i class="fa fa-search"></i>#search
             </button>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#profile">
                 <i class="fa fa-user"></i>
@@ -38,8 +47,8 @@
             </button>
         </div>
         <span class="d-md-none">
-        <div class="collapse navbar-collapse" id="search">
-            <ul class="navbar-nav">
+            <div class="collapse navbar-collapse" id="search">
+                <ul class="navbar-nav">
                 <li class="nav-item">
                     <form class="form">
                         <label for="searchInput">Что вы ищете</label>
@@ -62,10 +71,10 @@
                     </form>
                 </li>
             </ul>
-        </div>
-    </span>
+            </div>
+        </span>
         <span class="d-md-none">
-        <div class="collapse navbar-collapse" id="profile">
+            <div class="collapse navbar-collapse" id="profile">
             <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Войти</a>
@@ -75,9 +84,9 @@
                 </li>
             </ul>
         </div>
-    </span>
+        </span>
         <span class="d-md-none">
-        <div class="collapse navbar-collapse" id="menu">
+            <div class="collapse navbar-collapse" id="menu">
         <ul class="navbar-nav">
             <div class="nav-item nav-item-mobile">
                 <a class="nav-link btn btn-success btn-sm" href="#"><i class="fa fa-plus-circle"></i> Добавить объявление</a>
@@ -100,7 +109,7 @@
             </li>
         </ul>
     </div>
-    </span>
+        </span>
 
     </nav>
 </div>
