--- a/index_autorized.html
+++ b/index_autorized.html
@@ -30,38 +30,43 @@
         <div class="d-none d-md-flex align-items-center">
 
             <a href="#page" class="px-1">
-                <span class="fa-stack fa-1x has-badge" data-count="4">
+                <span class="fa-stack fa-1x">
                     <span class="fa fa-circle fa-stack-2x"></span>
                     <span class="fa fa-bell fa-stack-1x"></span>
                 </span>
+                <span class="badge badge-pill badge-danger">5</span>
             </a>
 
             <a href="#page" class="px-1">
-                <span class="fa-stack fa-1x has-badge" data-count="4">
+                <span class="fa-stack fa-1x">
                     <span class="fa fa-circle fa-stack-2x"></span>
                     <span class="fa fa-search fa-stack-1x"></span>
                 </span>
+                <span class="badge badge-pill badge-danger">4</span>
             </a>
 
             <a href="#page" class="px-1">
-                <span class="fa-stack fa-1x has-badge" data-count="4">
+                <span class="fa-stack fa-1x">
                     <span class="fa fa-circle fa-stack-2x"></span>
                     <span class="fa fa-list fa-stack-1x"></span>
                 </span>
+                <span class="badge badge-pill badge-danger">2</span>
             </a>
 
             <a href="#page" class="px-1">
-                <span class="fa-stack fa-1x has-badge" data-count="4">
+                <span class="fa-stack fa-1x">
                     <span class="fa fa-circle fa-stack-2x"></span>
                     <span class="fa fa-comment fa-stack-1x"></span>
                 </span>
+                <span class="badge badge-pill badge-danger">6</span>
             </a>
 
             <a href="#page" class="notice border-right mr-2 px-1">
-                <span class="fa-stack fa-1x has-badge" data-count="6">
+                <span class="fa-stack fa-1x has-badge">
                     <span class="fa fa-circle fa-stack-2x"></span>
                     <span class="fa fa-star fa-stack-1x"></span>
                 </span>
+                <span class="badge badge-pill badge-danger">8</span>
             </a>
 
             <a href="#page" class="btn btn-info">
